# Langchain-Groq-Chatbot

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflow/: main.yaml
.github/workflows/: main.yml
chatbot/: .dockerignore  app.py
