[project]
name = "langchain-Groq chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
